# openai-ng

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  client.rs  error.rs  lib.rs
src/proto/: chat.rs  file.rs  image.rs  mod.rs  sys.rs  tool.rs
src/tests/: kimi-tools.json  mod.rs  stepfun-chat-completion-request.json  stepfun-chat-completion-tools-reponse.json  stepfun-chat-stream-response.json  stepfun-chat-tools.json
